@@ -37,3 +37,4 @@ T13.3|26
 ERROR:  Edge motion collision at POINT(-1.1697 47.7825)
 Topology 'city_data' dropped
 t5709|edge|1
+ERROR:  Edge ring changes winding
